--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+
+<nav class="nav">
+  <h1>E-COMM</h1>
+  <div>
+    <input type="text"  placeholder="serach for product" />
+    <button>Search</button>
+  </div>
+  <ul>
+    <li><a href="#">Home</a> </li>
+    <li><a href="#">Seller</a> </li>
+    <li><a href="#">Login</a> </li>
+    <li><a href="#">Cart(0)</a> </li>
+
+  </ul>
+
+</nav>
