--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,3 +2,23 @@
   display: flex;
   justify-content: space-between;
 }
+
+.nav h1{
+  color: blueviolet;
+  margin: 0;
+  font-size: 40px;
+}
+.nav ul{
+  display: inline-flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.nav li{
+  padding-left: 15px;
+  padding-top: 15px;
+}
+.nav li a{
+  text-decoration: none;
+  color: blueviolet;
+}
