--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 
 <nav class="nav">
   <h1>E-COMM</h1>
-  <div>
+  <div class="nav-search">
     <input type="text"  placeholder="serach for product" />
     <button>Search</button>
   </div>
