--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -1,1 +1,12 @@
-<h1>Seller Auth Page</h1>
+<div class="seller-auth">
+  <div class="signup">
+    <h1>Seller Sign-Up</h1>
+    <form>
+      <input type="text" placeholder="Enter Name">
+      <input type="password" placeholder="Enter Password">
+      <input type="text" placeholder="Enter Email">
+      <button>SignUp</button>
+
+    </form>
+  </div>
+</div>
