--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,13 @@
-
 <nav class="nav">
-  <h1>E-COMM</h1>
+  <h1>E-Comm</h1>
   <div class="nav-search">
-    <input type="text"  placeholder="serach for product" />
+    <input type="text"  placeholder="serach product" />
     <button>Search</button>
   </div>
   <ul>
-    <li><a href="#">Home</a> </li>
-    <li><a href="#">Seller</a> </li>
-    <li><a href="#">Login</a> </li>
-    <li><a href="#">Cart(0)</a> </li>
-
+    <li><a href="seller-auth">Seller</a> </li>
+    <li><a href="">Home</a></li>
+    <li><a href="#">Login</a></li>
+    <li><a href="#">Cart(0)</a></li>
   </ul>
-
 </nav>
