--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -1,11 +1,11 @@
 <div class="seller-auth">
-  <div class="signup">
+  <div class="sign-up">
     <h1>Seller Sign-Up</h1>
-    <form>
-      <input type="text" placeholder="Enter Name">
-      <input type="password" placeholder="Enter Password">
-      <input type="text" placeholder="Enter Email">
-      <button>SignUp</button>
+    <form #sellerSignUp="ngForm" class="common-form">
+      <input class="form-input" type="text" placeholder="Enter Name">
+      <input class="form-input" type="password" placeholder="Enter Password">
+      <input class="form-input" type="text" placeholder="Enter Email">
+      <button class="form-button">SignUp</button>
 
     </form>
   </div>
