--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,7 +4,7 @@
 }
 
 .nav h1 {
-  color: blueviolet;
+  color: #087871;
   margin: 0;
   font-size: 40px;
 }
@@ -18,15 +18,15 @@
 
 .nav .nav-search input {
   flex: 1;
-  color: blueviolet;
-  border: 1px solid blueviolet;
+  color: black;
+  border: 1px solid #087871;
   height: 39px;
   border-right: none;
 }
 
 .nav .nav-search button{
-  color: blueviolet;
-  border: 1px solid blueviolet;
+  color:  black;
+  border: 1px solid #087871;
   height: 39px;
 }
 
@@ -44,6 +44,6 @@
 
 .nav ul a {
   text-decoration: none;
-  color: blueviolet;
+  color: black;
   cursor: pointer;
 }
