--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,27 @@ body{
   margin-left: 5%;
   margin-right: 5%;
 }
+.common-form{
+  text-align: center;
+  display: flex;
+ margin: auto;
+  flex-direction: column;
+  width: 300px;
+
+}
+.form-input{
+  height: 35px;
+  margin-bottom: 20px;
+  padding-left: 10px;
+  border-left: 1px solid #087871;
+  color: black;
+}
+.form-button{
+  height: 35px;
+  border-left: 1px solid #087871;
+  cursor: pointer;
 
 
 
+
+}
