add some function

--- a/src/app/seller-auth/seller-auth.component.html
+++ b/src/app/seller-auth/seller-auth.component.html
@@ -1,10 +1,10 @@
 <div class="seller-auth">
   <div class="sign-up">
     <h1>Seller Sign-Up</h1>
-    <form #sellerSignUp="ngForm" class="common-form">
-      <input class="form-input" type="text" placeholder="Enter Name">
-      <input class="form-input" type="password" placeholder="Enter Password">
-      <input class="form-input" type="text" placeholder="Enter Email">
+    <form #sellerSignUp="ngForm" (ngSubmit)="signUp(sellerSignUp.value)" class="common-form">
+      <input class="form-input" type="text"  ngModel name="name" placeholder="Enter Name">
+      <input class="form-input" type="password" name="password" placeholder="Enter Password">
+      <input class="form-input" type="text" name="email" placeholder="Enter Email">
       <button class="form-button">SignUp</button>
 
     </form>
