simple form updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<div class="container">
-  <app-header></app-header>
-  <router-outlet></router-outlet>
-</div>
+<h1>Angular Forms</h1>
+<h2>Simple Angular form</h2>
