--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,31 @@
 <h1>Angular Forms</h1>
-<h2>Simple Angular form</h2>
+
+
+<div class="container">
+  <h2>Simple Form</h2>
+  <form>
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" >
+    <br><br>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" >
+    <br><br>
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password">
+    <br><br>
+    <label for="number">Number</label>
+    <input type="number" id="number" name="number">
+    <br><br>
+    <label for="address">Address</label>
+    <input type="address" id="address" name="address">
+    <br><br>
+    <label for="city">City</label>
+    <input type="city" id="city" name="city">
+    <br><br>
+    <label for="pincode">Pincode</label>
+    <input type="pincode" id="pincode" name="pincode">
+    <br><br>
+    <button type="submit">Submit</button>
+  </form>
+
+</div>
