--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,5 @@
-<h1>Angular Forms</h1>
+<h1> Interpolation</h1>
 
-
-<div class="container">
-  <h2>Simple Form</h2>
-  <form>
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" >
-    <br><br>
-    <label for="email">Email</label>
-    <input type="email" id="email" name="email" >
-    <br><br>
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password">
-    <br><br>
-    <label for="number">Number</label>
-    <input type="number" id="number" name="number">
-    <br><br>
-    <label for="address">Address</label>
-    <input type="address" id="address" name="address">
-    <br><br>
-
-    <button type="submit">Submit</button>
-  </form>
-
-</div>
+<h2>
+  Welcome to {{name}}
+</h2>
